--- a/01.Input_Output (Frist JS code)/index.html
+++ b/01.Input_Output (Frist JS code)/index.html
@@ -7,6 +7,15 @@
     <title>Input & Output</title>
 </head>
 <body>
+
+
+    <div style="color: green; font-size: 20px">
+            <h1>
+                Welcome to 
+            </h1>
+
+    </div>
+
     <script>
         document.write("Welcome to JS Code <br>");
     </script>
